# PythonKni

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  PythonKni.spec  README.md  archive_window.py  config.json  config_window.py  converter_handler.py  duplicate_handler.py  interface.py  language_manager.py  main.py  networkScanner_handler.py  pyproject.toml  rar_handler.py  requirements.txt  scan_history.txt  temp_cleaner_handler.py  theme_manager.py  wifi_handler.py  zip_7zip_handler.py
.github/workflows/: ci.yml
__pycache__/: requierements.txt
docs/: architecture.md  security.md  usage.md
scripts/: build.ps1  run_dev.ps1
tests/: test_config.py  test_converter_service.py  test_duplicate_service.py  test_network_validation.py  test_pdf_pages.py  test_temp_cleaner.py  test_wifi_tool.py
tools/: app_paths.py  archive_tool.py  base_tool.py  config_service.py  config_window_tool.py  converter_tool.py  disk_analyzer_tool.py  duplicate_tool.py  event_viewer_tool.py  language_manager.py  logging_config.py  network_tool.py  pdf_merge_tool.py  process_manager_tool.py  startup_manager_tool.py  system_report_tool.py  temp_cleaner_tool.py  theme_manager.py  wifi_tool.py  zip_7zip_utils.py
